<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.alcanl.cleverear.viewmodel.ControlActivityListenersViewModel"/>
        <import type="com.alcanl.cleverear.entity.HearingAid"/>
        <import type="com.alcanl.cleverear.helpers.EarSide"/>
        <variable name="hearingAid" type="HearingAid" />
        <variable name="viewModel" type="ControlActivityListenersViewModel" />
        <variable name="isDualDevice" type="boolean" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchDualConfiguration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="151dp"
                android:layout_marginBottom="24dp"
                android:checked="@={isDualDevice}"
                android:fontFamily="sans-serif-medium"
                android:onCheckedChanged="@{()-> viewModel.handleSwitchCheckedChange()}"
                android:text="@string/switch_dual_device_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textViewPrograms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRightSeekBar"
                app:thumbTint="@drawable/switch_theme" />

            <TextView
                android:id="@+id/textViewRightSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="123dp"
                android:layout_marginEnd="66dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_right_device_text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderRight" />

            <TextView
                android:id="@+id/textViewLeftSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="123dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_left_device_text"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderRight" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderLeft"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-40dp"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="123dp"
                android:enabled="@{hearingAid.component5() == EarSide.Left}"
                android:rotation="270"
                android:value="20.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintBottom_toTopOf="@+id/textViewRightSeekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewVolume"
                app:onValueChangeListener="@{(value) -> viewModel.handleLeftEarSliderValueChange(value)}"
                app:thumbColor="@color/design_default_color_secondary_variant"
                app:thumbStrokeColor="@color/design_default_color_secondary_variant"
                app:thumbRadius="16dp"
                app:trackColor="#A8A3A3"
                app:trackHeight="12dp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderRight"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="-40dp"
                android:layout_marginBottom="123dp"
                android:enabled="@{hearingAid.component5() == EarSide.Right}"
                android:rotation="270"
                android:value="20.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintBottom_toTopOf="@+id/textViewRightSeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewVolume"
                app:onValueChangeListener="@{(value) -> viewModel.handleRightEarSliderValueChange(value)}"
                app:thumbColor="@color/design_default_color_secondary_variant"
                app:thumbStrokeColor="@color/design_default_color_secondary_variant"
                app:thumbRadius="16dp"
                app:trackColor="#A8A3A3"
                app:trackHeight="12dp" />

            <TextView
                android:id="@+id/textViewPrograms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginEnd="144dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_program_text"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_volume_text"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="87dp"
            android:layout_height="90dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/main_logo_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cleverear_logo_opacity" />

        <TableLayout
            android:id="@+id/tableLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/table_layout_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonOneClick()}"
                    android:text="@string/button_text_one"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonTwoClick()}"
                    android:text="@string/button_text_two"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonThreeClick()}"
                    android:text="@string/button_text_three"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonFourClick()}"
                    android:text="@string/button_text_four"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonFiveClick()}"
                    android:text="@string/button_text_five"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonSixClick()}"
                    android:text="@string/button_text_six"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonSevenClick()}"
                    android:text="@string/button_text_seven"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A8A3A3"
                    android:enabled="false"
                    android:onClick="@{()-> viewModel.handleButtonEightClick()}"
                    android:text="@string/button_text_eight"
                    android:textColor="@color/ap_black"
                    android:textSize="24sp"
                    app:cornerRadius="50dp" />
            </TableRow>


        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:menu="@menu/bottom_nav_menu" />

    <FrameLayout
        android:id="@+id/frameLayoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1EAEA"
        android:backgroundTint="#C4F3EEEE"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="89dp"
            android:layout_height="82dp"
            android:indeterminateTint="@color/design_default_color_secondary_variant"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>