<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.alcanl.cleverear.viewmodel.EarSideSelectionActivityListenersViewModel"/>
        <variable
            name="viewModel"
            type="EarSideSelectionActivityListenersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="328dp"
            android:layout_height="180dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:contentDescription="@string/main_logo_description_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127"
            app:srcCompat="@drawable/cleverear_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="414dp"
            android:layout_height="350dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="323dp"
                android:layout_weight="5">

                <ImageButton
                    android:layout_width="119dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:onClick="@{()-> viewModel.handleLeftEarButton()}"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/lefteargray_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/alert_dialog_left_ear_side_text"
                    android:textColor="@color/ap_black"
                    android:textSize="20sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="323dp"
                android:layout_weight="5">

                <ImageButton
                    android:layout_width="119dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:onClick="@{() -> viewModel.handleRightEarButton()}"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/right_ear_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/alert_dialog_right_ear_side_text"
                    android:textColor="@color/ap_black"
                    android:textSize="20sp" />
            </FrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>